# Canella

./: .gitignore  CMakeLists.txt  CMakePresets.json  Canella.h  Higgy.cpp  Higgy.h  README.md  config.json  imgui.ini  imgui_log.txt  main.cpp  test.cpp  test.h
HiggySrc/: CMakeLists.txt
HiggySrc/Application/include/Application/: Application.h
HiggySrc/Application/src/: Application.cpp
HiggySrc/Component/include/Component/: Component.h
HiggySrc/Component/src/: Component.cpp
HiggySrc/ComponentRegistry/include/ComponentRegistry/: ComponentRegistry.h
HiggySrc/ComponentRegistry/src/: ComponentRegistry.cpp
HiggySrc/Device/include/Device/: Device.h
HiggySrc/Entity/include/Entity/: Entity.h
HiggySrc/Entity/src/: Entity.cpp
HiggySrc/Image/include/Image/: Image.h
HiggySrc/Image/src/: Image.cpp
HiggySrc/Input/src/: Input.cpp
HiggySrc/Render/include/Render/: Render.h
HiggySrc/Render/src/: Render.cpp
HiggySrc/RenderBackend/VulkanBackend/Device/src/: Device.cpp
HiggySrc/RenderBackend/VulkanBackend/Swapchain/src/: Swapchain.cpp
HiggySrc/Scenegraph/include/Scenegraph/: Scenegraph.h
HiggySrc/Scenegraph/src/: Scenegraph.cpp
HiggySrc/Window/include/Window/: Window.h
HiggySrc/Window/src/: Window.cpp
HiggySrc/defaultComponents/Transform/include/Transform/: Transform.h
HiggySrc/defaultComponents/Transform/src/: Transform.cpp
config/: config.json
src/: CMakeLists.txt
src/Application/include/Application/: Application.h
src/Application/src/: Application.cpp
src/AssetSystem/include/AssetSystem/: AssetSystem.h
src/AssetSystem/src/: AssetSystem.cpp
src/Component/include/Component/: Component.h
src/Component/src/: Component.cpp
src/ComponentManager/include/ComponentManager/: ComponentManager.h
src/ComponentManager/src/: ComponentManager.cpp
src/ComponentRegistry/include/ComponentRegistry/: ComponentRegistry.h
src/ComponentRegistry/src/: ComponentRegistry.cpp
src/Components/include/Components/: ComponentTable.hpp  Components.h
src/Components/src/: Components.cpp
src/Containers/include/Canella/: ThreadQueue.hpp
src/Editor/include/Editor/: Editor.h  EditorLayer.h  Inspector.h  Viewport.h
src/Editor/src/: Editor.cpp  EditorLayer.cpp  Inspector.cpp  Viewport.cpp
src/EditorComponents/include/EditorComponents/: EditorComponents.h
src/EditorComponents/src/: EditorComponents.cpp
src/Entity/include/: Entity.h
src/Entity/include/Entity/: Entity.h
src/Entity/src/: Entity.cpp
src/EntityManager/include/EntityManager/: EntityManager.h
src/EntityManager/src/: EntityManager.cpp
src/Eventsystem/include/Eventsystem/: Eventsystem.h  Eventsystem.hpp
src/Eventsystem/src/: Eventsystem.cpp
src/ImGUI/: ImCoolbar.cpp  ImCoolbar.h  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  ImGuizmo.cpp  ImGuizmo.h  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/ImGUI/FontsAwesome/: IconsFontAwesome.h
src/ImGUI/ImCoolBar/: LICENSE.txt
src/Image/include/Image/: Image.h
src/Image/src/: Image.cpp
src/Input/include/Input/: Input.h
src/Input/src/: Input.cpp
src/JobSystem/include/JobSystem/: JobSystem.h
src/JobSystem/src/: JobSystem.cpp
src/Logger/include/Logger/: Logger.cpp  Logger.hpp
src/MaterialManager/include/MaterialManager/: MaterialManager.h
src/MaterialManager/src/: MaterialManager.cpp
src/Meshoptimizer_/: clusterizer.cpp  indexcodec.cpp  indexgenerator.cpp  meshoptimizer.h  overdrawoptimizer.cpp  simplifier.cpp  stripifier.cpp  vcacheoptimizer.cpp  vertexcodec.cpp  vfetchoptimizer.cpp
src/Project/include/Project/: Project.h
src/Project/src/: Project.cpp
src/Render/include/Render/: Framework.h  Render.h
src/Render/src/: Framework.cpp  Render.cpp
src/RenderBackend/RenderWrapper/: GraphicsWrapper.h
src/RenderBackend/VulkanBackend/AsynchronousLoader/src/: AsynchronousLoader.cpp
src/RenderBackend/VulkanBackend/CanellaUtility/src/: CanellaUtility.cpp
src/RenderBackend/VulkanBackend/Commandpool/src/: Commandpool.cpp
src/RenderBackend/VulkanBackend/DescriptorSet/src/: DescriptorSet.cpp
src/RenderBackend/VulkanBackend/Descriptorpool/src/: Descriptorpool.cpp
src/RenderBackend/VulkanBackend/Device/src/: Device.cpp
src/RenderBackend/VulkanBackend/Frame/src/: Frame.cpp
src/RenderBackend/VulkanBackend/Image/src/: Image.cpp
src/RenderBackend/VulkanBackend/Instance/src/: Instance.cpp
src/RenderBackend/VulkanBackend/Mesh/src/: Mesh.cpp
src/RenderBackend/VulkanBackend/Pipeline/src/: Pipeline.cpp
src/RenderBackend/VulkanBackend/PipelineBuilder/src/: PipelineBuilder.cpp
src/RenderBackend/VulkanBackend/RenderAttachment/src/: RenderAttachment.cpp
src/RenderBackend/VulkanBackend/RenderGraph/src/: RenderGraph.cpp
src/RenderBackend/VulkanBackend/RenderNodes/src/: GeometryNode.cpp  GeomtryNode.cpp  RenderNodes.cpp
src/RenderBackend/VulkanBackend/Renderpass/src/: Renderpass.cpp
src/RenderBackend/VulkanBackend/RenderpassManager/src/: RenderpassManager.cpp
src/RenderBackend/VulkanBackend/Resources/src/: Resources.cpp
src/RenderBackend/VulkanBackend/Swapchain/src/: Swapchain.cpp
src/RenderBackend/VulkanBackend/VulkanImpl/src/: VulkanImpl.cpp
src/RenderBackend/VulkanBackend/VulkanRender/src/: VulkanRender.cpp
src/Scene/include/Scene/: Scene.h
src/Scene/src/: Scene.cpp
src/Scenegraph/include/Scenegraph/: Scenegraph.h
src/Scenegraph/src/: Scenegraph.cpp
src/Serializer/include/Serializer/: Serializer.h
src/Serializer/src/: Serializer.cpp
src/SpirV/: spirv.h  spirv_reflect.c  spirv_reflect.h
src/Stb/: stb.h
src/Systems/include/Systems/: Systems.h
src/Systems/src/: Systems.cpp
src/Threadpool/include/Threadpool/: Threadpool.h
src/Window/include/Window/: Window.h
src/Window/src/: Window.cpp
src/defaultComponents/CameraController/src/: CameraController.cpp
src/defaultComponents/Transform/src/: Transform.cpp
src/rEntity/include/rEntity/: Entity.h
src/rEntity/src/: Entity.cpp
(+357 files in other folders)
